--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "aceternity-ui": "^0.2.2",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.3.21",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
